; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/extr_xattr.c_ocfs2_reflink_xattr_no_security.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/extr_xattr.c_ocfs2_reflink_xattr_no_security.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocfs2_xattr_entry = type { i32 }

@OCFS2_XATTR_INDEX_SECURITY = common dso_local global i32 0, align 4
@OCFS2_XATTR_INDEX_POSIX_ACL_ACCESS = common dso_local global i32 0, align 4
@OCFS2_XATTR_INDEX_POSIX_ACL_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ocfs2_xattr_entry*)* @ocfs2_reflink_xattr_no_security to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ocfs2_reflink_xattr_no_security(%struct.ocfs2_xattr_entry* %0) #0 {
  %2 = alloca %struct.ocfs2_xattr_entry*, align 8
  %3 = alloca i32, align 4
  store %struct.ocfs2_xattr_entry* %0, %struct.ocfs2_xattr_entry** %2, align 8
  %4 = load %struct.ocfs2_xattr_entry*, %struct.ocfs2_xattr_entry** %2, align 8
  %5 = call i32 @ocfs2_xattr_get_type(%struct.ocfs2_xattr_entry* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @OCFS2_XATTR_INDEX_SECURITY, align 4
  %8 = icmp ne i32 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @OCFS2_XATTR_INDEX_POSIX_ACL_ACCESS, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @OCFS2_XATTR_INDEX_POSIX_ACL_DEFAULT, align 4
  %16 = icmp ne i32 %14, %15
  br label %17

17:                                               ; preds = %13, %9, %1
  %18 = phi i1 [ false, %9 ], [ false, %1 ], [ %16, %13 ]
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32 @ocfs2_xattr_get_type(%struct.ocfs2_xattr_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
